# EthCC-Workshop

./: .gitignore  PRIMER.md  README.md
solution_voting/: .gitignore
solution_voting/src/: main.sw  voting_library.sw
solution_voting/tests/: harness.rs  utils.rs
tmp/: Cargo.toml  Forc.toml
tmp/tests/: harness.rs
token/: Cargo.toml  Forc.toml  README.md
token/src/: main.sw
voting/: Cargo.toml  Forc.toml  README.md
voting/src/: errors.sw  main.sw  voting_library.sw
voting/tests/: harness.rs  utils.rs
