[project]
name = "voting"
version = "0.1.0"
authors = ["Emily Herbert"]
edition = "2021"
license = "Apache-2.0"

[dependencies]
fuels = { version = "0.17", features = ["fuel-core-lib"] }
tokio = { version = "1.12", features = ["rt", "macros"] }

[[test]]
harness = true
name = "integration_tests"
path = "tests/harness.rs"
